public interface Computer {

    public void setProcessor(String processor);
    public void setRAM(String RAM);
}

